deployment/registration-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-api
  namespace: dev
  labels:
    app.kubernetes.io/instance: registration-api
    app.kubernetes.io/name: registration-api
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: registration-api
      app.kubernetes.io/name: registration-api
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: registration-api
        app.kubernetes.io/name: registration-api
    spec:
      serviceAccountName: registration-api
      containers:
      - name: registration-api
        #image: 'registry.gitlab.eox.at/eox/hub/registration-api:0.8.5'
        image: registration-api-k8s:0
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /probe
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /probe
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 8
          failureThreshold: 1
        resources:
          limits:
            cpu: 0.5
            memory: 512Mi
          requests:
            cpu: 0.05
            memory: 128Mi
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
